# bayut-scanner

./: .gitignore  README.md  bayut_scanner.py  main.py  properties.csv  properties.xlsx  pyproject.toml  sematics_matcher.py  utils.py
