[project]
name = "bayut-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipython>=8.31.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-levenshtein>=0.26.1",
    "requests>=2.32.3",
    "spacy>=3.8.3",
    "streamlit>=1.41.1",
    "thefuzz>=0.22.1",
]
